Update failsafe memory to 1GB by default and ensure that it runs with a debugger set in the blc-development profile